feat(redis): integrate redis for caching and session storage
This commit adds Redis integration to the project for caching and session management.

- Adds `ioredis` library for Redis client.

- Configures `REDIS_URL` in environment variables.

- Creates a singleton Redis client instance for connection reuseablity.

- Implements a `checkRedisConnection` function to verify Redis connectivity.

- Adds a new API endpoint at `/api/health/redis` to publicly expose the Redis health check.

- Defines `RedisHealthCheckResult` type for consistent health check responses.

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,20 @@ GITHUB_CLIENT_SECRET=
 # Production Redirect URL: https://yourdomain.com/api/auth/callback/google  
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
+# Resend API key for sending emails
+# Get your API key from https://resend.com
+# Important: You will only be able to use domains to send emails which are verified and linked to the API key
+RESEND_API_KEY=
+
+# Redis connection URL for caching and session storage
+# Format: redis://username:password@host:port/database or rediss://username:password@host:port/database
+# Use redis:// for non-SSL and rediss:// for SSL/TLS connections
+# Examples:
+#   Local Redis: redis://localhost:6379
+#   Upstash Redis: rediss://username:password@region-redis.upstash.io:6379
+# Popular Redis providers:
+#   - Upstash Redis: https://upstash.com (free tier available)
+#   - Redis Cloud: https://redis.com/redis-enterprise-cloud (free tier available)
+#   - Railway Redis: https://railway.com (simple deployment)
+REDIS_URL="redis://USERNAME:PASSWORD@HOST:PORT/DATABASE"
