--- a/package.json
+++ b/package.json
@@ -55,8 +55,13 @@
     "@react-email/components": "^0.5.6",
     "@react-email/render": "^1.3.1",
     "@t3-oss/env-nextjs": "^0.13.8",
+    "@tanstack/react-query": "^5.90.2",
+    "@trpc/client": "^11.6.0",
+    "@trpc/server": "^11.6.0",
+    "@trpc/tanstack-react-query": "^11.6.0",
     "better-auth": "^1.3.25",
     "class-variance-authority": "^0.7.1",
+    "client-only": "^0.0.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
@@ -73,7 +78,9 @@
     "react-resizable-panels": "^3.0.6",
     "recharts": "2.15.4",
     "resend": "^6.1.2",
+    "server-only": "^0.0.1",
     "sonner": "^2.0.7",
+    "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
     "zod": "^4.1.12"
