--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "auth:generate": "bunx @better-auth/cli generate --config ./src/modules/auth/lib/auth.ts"
   },
   "dependencies": {
+    "@better-fetch/fetch": "^1.1.18",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.16.3",
     "@prisma/extension-accelerate": "^2.0.2",
